# nsite-rs

./: .opencode.json  AGENTS.md  Cargo.toml  Dockerfile  README.md  nip5a.md
.github/workflows/: docker-push.yml
src/: index.html  main.rs  site.rs
