[package]
name = "nsite-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
nostr-sdk = "0.44"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.13", features = ["stream"] }
rustls = "0.23"
once_cell = "1"